tests/suite/fail/generated/types/fail_add_f64_bool.ny
fn main() {
    let _ = 1.0 + true //~ ERROR Type mismatch in arithmetic
}
